# mta-display

./: .gitignore  Cargo.toml  Dockerfile  build.rs  input.css
.github/workflows/: docker_build_and_push.yml
migrations/: 20251104203342_init.sql
src/: db.rs  main.rs  models.rs  pattern.rs  types.rs
