[package]
name = "mta-display"
version = "0.1.0"
edition = "2024"

[dependencies]
gif = "0.13"
image = "0.25"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
maud = { version = "0.27.0", features = ["axum"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "debug-embed"] }
mime_guess = "2.0.5"
urlencoding = "2.1.3"
