[package]
name = "mta-display"
version = "0.1.0"
edition = "2024"

[dependencies]
gif = "0.13"
image = "0.25"
axum = {version="0.8",features=["macros"]}
tokio = { version = "1.0", features = ["full"] }
maud = { version = "0.27.0", features = ["axum"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "debug-embed"] }
mime_guess = "2.0.5"
urlencoding = "2.1.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
